@@ -245,6 +245,17 @@
 	rewrite `created-at' by a same name element in `retweeted_status'
 	node.
 
+2010-02-02  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el (twittering-http-get-default-sentinel): use
+	`twittering-get-status-from-http-response'.
+	(twittering-get-status-from-http-response): new function for
+	extracting statuses from HTTP response.
+	(twittering-get-tweets): use
+	`twittering-http-get-default-sentinel' for the "search" timeline
+	spec.
+	(twittering-http-get-search-sentinel): removed.
+
 2010-01-31  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-http-get-default-sentinel):
